# minisign

./: .travis.yml  README.md  install-meson.sh  install-ninja-build.sh  install-pip.sh  install-python3.sh  install-sodium.sh  meson.build
